<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Other -->
    <string name="app_name">Printable RSA Certificate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_bitmap">displayBitmap</string>

    <!-- MenuItemst -->
    <string name="print">Print</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>

    <!-- Buttons -->
    <string name="but_main">Create Paper RSA certificates</string>
    <string name="but_get509cert">Create 509 certificate</string>
    <string name="but_getKey">Create Key</string>
    <string name="but_choose">Choose a certificate</string>

    <!-- Toasts -->
    <string name="toast_wrongPassword">Wrong password. Please try again.</string>

    <!-- TextViews -->
    <string name="hello_text">Welcome to PrtintableRSACertificate.</string>
    <string name="et_password">Enter PKCS password</string>
    <string name="explanation">This app reads your PKCS12 certificate (p12 or pfx) and transforms it to a Barcode. Find your certificate, enter its password and click Continue. (Choosing a file from Google drive doesnt work)
    If you have trouble choosing a certificate, try installing a file manager from Android Store.</string>

    <!-- For Certificate Bitmap -->
    <string name="bm_titleCert">Certified RSA Public Key</string>
    <string name="bm_titleKey">Encrypted RSA Private Key</string>
    <string name="bm_underTitleCert">This document contains 2 pieces of information.
        The small QR code is your public key. Public key is used to verify your digital signature. It is a sort of your
        identity, just like a social security number or tax number. The document receiver must have your public key in order to verify authenticity of your messages.
        \n
        The big QR code is your certificate. Certificate is nothing more than a public key, digitally signed by someone we all trust (most likely the government).
        Essentially, it links you (persona) to your public key, and the government is vouching that this is true. It contains some other information as well, such as
        creation date, expiration date, your email, etc. Public keys can also be used for encryption. Your friend Bob can encrypt a message using YOUR (not his) public key.
        Once encrypted, only you (not even Bob) can decrypt the message using YOUR private key, which you are keeping secret. If you want to send a private message to Bob,
        you need to get Bob\'s public key.

    </string>
    <string name="bm_underTitleKey">This document contains a reduced-size RSA private key.
        It is of utmost IMPORTANCE that you keep this document only for yourself.
        KEEP IT A SECRET. A private key is a digital entity with which you are able to sign digital documents.
        This means, that this file is essentially your signature.
        For security, the private key is encrypted with a password which you provided. Whoever gains access to
        this file and your password can create valid signatures in your name.</string>


</resources>
