<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="csbslovenia.com.printablersacertificate.displayBitmap" >
    <item android:id="@+id/share"
        android:title="@string/share"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:onClick="shareBitmap"/>

    <item android:id="@+id/save"
        android:title="@string/save"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:onClick="saveBitmap"/>

    <item android:id="@+id/print"
        android:title="@string/print"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:onClick="printBitmap"/>

    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:onClick="exit"/>
</menu>
